--- a/docs/tutorial-basics/create-your-profile.mdx
+++ b/docs/tutorial-basics/create-your-profile.mdx
@@ -14,7 +14,7 @@ First, let's connect to Crossbell!
 
 Click the button below. You will be asked to connect to your wallet, and switch to the **Crossbell** chain.
 
-import Connector from "@site/src/components/connector";
+import Connector from "../../src/components/connector";
 
 <Connector />
 
