docs: update some wordings

--- a/docs/2-create.mdx
+++ b/docs/2-create.mdx
@@ -4,7 +4,7 @@ sidebar_position: 1
 
 # Mint Your Character In 3 Mins
 
-Character is where your story will start. All following social activities in the Crossbell world are made with your character. 
+Your character is where your story will start. All subsequent social activities in the Crossbell world are tied to your character.
 
 Besides... it's an NFT! 
 
